otras correcciones de textos

--- a/WebApplication1/Areas/coadmin/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/Shared/_Layout.cshtml
@@ -353,7 +353,7 @@
                                             <a href="javascript:void(0);" class="waves-effect waves-light"><i class="mdi mdi-server"></i><span> Tareas en proceso </span><span class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                                             <ul class="list-unstyled">
                                                 <li><a href="@Url.Action("listado","tareas", new { area = "coadmin" })">Listado de tareas</a></li>
-                                                <li><a href="@Url.Action("agregar", "tareas", new { area = "coadmin" })">Tareas </a></li>
+                                                <li><a href="@Url.Action("agregar", "tareas", new { area = "coadmin" })">Crear tarea</a></li>
                                                 <li><a href="@Url.Action("completadas", "tareas", new { area = "coadmin" })">Tareas completadas</a></li>
                                             </ul>
                                         }
