--- a/WebApplication1/Areas/coadmin/Views/contacto/informacion.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/contacto/informacion.cshtml
@@ -14,7 +14,7 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Información de Contacto</h4>
+                            <h4 class="page-title">Información de contacto</h4>
                         </div>
                     </div>
                     <div class="float-right">
@@ -51,11 +51,11 @@
                                    
                                         <input class="form-control" type="email" value=""
                                                required name="company_admin"
-                                               placeholder="Compañía Administración" id="example-email-input"
+                                               placeholder="Compañía administración" id="example-email-input"
                                                data-toggle="tooltip" title="Nombre de Compañía de administración" />
                                     
 
-                                    <small class="form-text text-muted">Nombre de Compañía de Administración</small>
+                                    <small class="form-text text-muted">Nombre de Compañía de administración</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
@@ -65,9 +65,9 @@
                                    
                                         <input class="form-control" type="text" value="" name="coordinator"
                                                placeholder="Administrador o Coordinador" id="example-name1-input"
-                                               data-toggle="tooltip" title="Administrador o Coordinador de Administración" />
+                                               data-toggle="tooltip" title="Administrador o Coordinador de administración" />
                                    
-                                    <small class="form-text text-muted">Administrador o Coordinador de Administración</small>
+                                        <small class="form-text text-muted">Administrador o Coordinador de administración</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
@@ -102,12 +102,12 @@
                                 <div class="col-sm-9">
                                    
                                         <input class="form-control" type="text" value="" name="treasurer"
-                                               placeholder="Nombre del Tesorero"
-                                               data-toggle="tooltip" title="Nombre completo del Tesorero"
+                                               placeholder="Nombre del tesorero"
+                                               data-toggle="tooltip" title="Nombre completo del tesorero"
                                                id="example-lastname1-input">
                                     
 
-                                    <small class="form-text text-muted">Nombre completo del Tesorero</small>
+                                        <small class="form-text text-muted">Nombre completo del tesorero</small>
                                 </div>
                             </div>
                             <div class="form-group row">
@@ -115,11 +115,11 @@
                                 <div class="col-sm-9">
                                    
                                         <input class="form-control" type="text" value="" name="secretary"
-                                               placeholder="Nombre del Secretario" id="example-lastname1-input"
-                                               data-toggle="tooltip" title="Nombre completo del Secretario" />
+                                               placeholder="Nombre del secretario" id="example-lastname1-input"
+                                               data-toggle="tooltip" title="Nombre completo del secretario" />
                                     
 
-                                    <small class="form-text text-muted">Nombre completo del Secretario</small>
+                                        <small class="form-text text-muted">Nombre completo del secretario</small>
                                 </div>
                             </div>
                             <div class="form-group row">
@@ -127,11 +127,11 @@
                                 <div class="col-sm-9">
                                   
                                         <input class="form-control" type="text" value="" name="vocal1"
-                                               placeholder="Nombre del Vocal" id="example-lastname1-input"
-                                               data-toggle="tooltip" title="Nombre completo del Vocal" />
+                                               placeholder="Nombre del vocal" id="example-lastname1-input"
+                                               data-toggle="tooltip" title="Nombre completo del vocal" />
                                     
 
-                                    <small class="form-text text-muted">Nombre completo del Vocal</small>
+                                        <small class="form-text text-muted">Nombre completo del vocal</small>
                                 </div>
                             </div>
                             <div class="form-group row">
@@ -139,10 +139,10 @@
                                 <div class="col-sm-9">
                                    
                                         <input class="form-control" type="text" value="" name="vocal2"
-                                               placeholder="Nombre del Vocal" id="example-lastname1-input"
-                                               data-toggle="tooltip" title="Nombre completo del Vocal" />
+                                               placeholder="Nombre del vocal" id="example-lastname1-input"
+                                               data-toggle="tooltip" title="Nombre completo del vocal" />
                                     
-                                    <small class="form-text text-muted">Nombre completo del Vocal</small>
+                                        <small class="form-text text-muted">Nombre completo del vocal</small>
                                 </div>
                             </div>
                             <div class="form-group row">
@@ -150,19 +150,19 @@
                                 <div class="col-sm-9">
                                    
                                         <input class="form-control" type="text" value="" name="vocal3"
-                                               placeholder="Nombre del Vocal" id="example-lastname1-input"
-                                               data-toggle="tooltip" title="Nombre completo del Vocal" />
+                                               placeholder="Nombre del vocal" id="example-lastname1-input"
+                                               data-toggle="tooltip" title="Nombre completo del vocal" />
                                     
-                                    <small class="form-text text-muted">Nombre completo del Vocal</small>
+                                        <small class="form-text text-muted">Nombre completo del vocal</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-lastname1-input" class="col-sm-3 col-form-label">Dirección Física</label>
+                                <label for="example-lastname1-input" class="col-sm-3 col-form-label">Dirección física</label>
                                 <div class="col-sm-9">
                                    
                                         <input class="form-control" type="text" value=""
-                                               placeholder="Dirección Física" name="phy_address"
+                                               placeholder="Dirección física" name="phy_address"
                                                data-toggle="tooltip" title="Dirección física"
                                                id="example-lastname1-input">
                                     
@@ -171,11 +171,11 @@
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-lastname1-input" class="col-sm-3 col-form-label">Dirección Postal</label>
+                                <label for="example-lastname1-input" class="col-sm-3 col-form-label">Dirección postal</label>
                                 <div class="col-sm-9">
                                    
                                         <input class="form-control" type="text" value="" name="postal_address" required
-                                               placeholder="Dirección Postal" id="example-lastname1-input"
+                                               placeholder="Dirección postal" id="example-lastname1-input"
                                                data-toggle="tooltip" title="Dirección postal" />
                                     
 
@@ -221,7 +221,7 @@
                             </div>
                             <div class="form-divider"></div>
                             <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
-                            @*<a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>*@
+                            <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
                 </div>
