--- a/WebApplication1/Areas/coadmin/Views/contratos/archivados.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/contratos/archivados.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "archivados";
-    Page.Title = "Contratos Archivados - Brokolee Software";
+    Page.Title = "Contratos archivados - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Contratos Archivados</li>
+                            <li class="breadcrumb-item active">Contratos archivados</li>
                         </ul>
                     </div>
                 </div>
@@ -66,9 +66,9 @@
                                 <thead class="alert-inactive">
                                     <tr>
                                         <th class="f-b">Nº</th>
-                                        <th class="f-b">Nombre de Contrato</th>
-                                        <th class="f-b">Fecha de Contrato</th>
-                                        <th class="f-b">Fecha de Notificación</th>
+                                        <th class="f-b">Nombre de contrato</th>
+                                        <th class="f-b">Fecha de contrato</th>
+                                        <th class="f-b">Fecha de notificación</th>
                                         <th class="f-b text-center">Archivo</th>
                                         <th class="f-b">Descripción</th>
                                     </tr>
