--- a/WebApplication1/Areas/coadmin/Views/contratos/listado.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/contratos/listado.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "listado";
-    Page.Title = "Listado de Contratos - Brokolee Software";
+    Page.Title = "Listado de contratos - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -13,13 +13,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Listado de Contratos</h4>
+                            <h4 class="page-title">Listado de contratos</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Listado de Contratos</li>
+                            <li class="breadcrumb-item active">Listado de contratos</li>
                         </ul>
                     </div>
                 </div>
@@ -76,9 +76,9 @@
                                 <thead>
                                     <tr>
                                         <th class="f-b">Nº</th>
-                                        <th class="f-b">Nombre de Contrato</th>
-                                        <th class="f-b">Fecha de Contrato</th>
-                                        <th class="f-b">Fecha de Notificación</th>
+                                        <th class="f-b">Nombre de contrato</th>
+                                        <th class="f-b">Fecha de contrato</th>
+                                        <th class="f-b">Fecha de notificación</th>
                                         <th class="f-b text-center">Archivo</th>
                                         <th class="f-b">Descripción</th>
                                         <th class="f-b text-center">Estado</th>
