--- a/WebApplication1/Areas/coadmin/Views/control/panel.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/control/panel.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "panel";
-    Page.Title  = "Brokolee Software - Asistente Virtual para la Administración de Comunidades";
+    Page.Title  = "Brokolee Software - Asistente virtual para la administración de comunidades";
 }
 
 <div class="page-content-wrapper">
