--- a/WebApplication1/Areas/coadmin/Views/plantillas/crear.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/plantillas/crear.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "crear";
-    Page.Title = "Crear Plantilla de Email - Brokolee Software";
+    Page.Title = "Crear plantilla de email - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Crear Plantillas de Email</li>
+                            <li class="breadcrumb-item active">Crear plantilla de email</li>
                         </ul>
                     </div>
                 </div>
@@ -38,7 +38,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="d-inline-block">Nueva Plantilla</h5>
+                        <h5 class="d-inline-block">Nueva plantilla</h5>
                         <div class="form-divider"></div>
                         <div class="col-lg-12">
                             @using (Html.BeginForm("AddEmaulTheme", "plantillas",
