--- a/WebApplication1/Areas/coadmin/Views/tareas/vertarea.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/tareas/vertarea.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "vertarea";
-    Page.Title = "Ver Tarea - Brokolee Software";
+    Page.Title = "Ver tarea - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i>Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Ver Tarea</li>
+                            <li class="breadcrumb-item active">Ver tarea</li>
                         </ul>
                     </div>
                 </div>
