--- a/WebApplication1/Areas/coadmin/Views/contacto/listado.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/contacto/listado.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "listado";
-    Page.Title = "Listado de Contactos - Brokolee Software";
+    Page.Title = "Listado de contactos - Brokolee Software";
 }
 
     <div class="page-content-wrapper">
@@ -12,13 +12,13 @@
                     <div class="page-title-box">
                         <div class="float-left">
                             <div class="breadcrumb float-md-right">
-                                <h4 class="page-title">Listado de Contactos</h4>
+                                <h4 class="page-title">Listado de contactos</h4>
                             </div>
                         </div>
                         <div class="float-right">
                             <ul class="breadcrumb float-md-right">
                                 <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                                <li class="breadcrumb-item active">Listado de Contactos</li>
+                                <li class="breadcrumb-item active">Listado de contactos</li>
                             </ul>
                         </div>
                     </div>
