--- a/WebApplication1/Areas/coadmin/Views/contratos/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/contratos/editar.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "editar";
-    Page.Title = "Editar Contrato - Brokolee Software";
+    Page.Title = "Editar contrato - Brokolee Software";
 }
 
 <script src="~/Scripts/jquery-3.1.1.min.js"></script>
@@ -22,13 +22,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Editar Contrato</h4>
+                            <h4 class="page-title">Editar contrato</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin"  })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Editar Contrato</li>
+                            <li class="breadcrumb-item active">Editar contrato</li>
                         </ul>
                     </div>
                 </div>
@@ -59,28 +59,28 @@
                         @Html.AntiForgeryToken()
                         <input name="contractID" value="@Model.editContract.id" type="hidden" />
                         <div class="card-body">
-                            <h5 class="d-inline-block">Contraro de Prestación de Servicios 1</h5>
+                            <h5 class="d-inline-block">Contrato de prestación de servicios 1</h5>
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" type="text"
-                                           data-toggle="tooltip" title="Nombre del Contrato"
+                                           data-toggle="tooltip" title="Nombre del contrato"
                                            value="@Model.editContract.first_name"
                                            name="first_name" required
                                            placeholder="Nombre" id="example-email-input">
-                                    <small class="form-text text-muted">Nombre del Contrato</small>
+                                    <small class="form-text text-muted">Nombre del contrato</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-date-input" class="col-sm-3 col-form-label">Fecha del Contrato</label>
+                                <label for="example-date-input" class="col-sm-3 col-form-label">Fecha del contrato</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" type="date" required
                                            value="@Convert.ToDateTime(Model.editContract.date_contract).ToString("yyyy-MM-dd")"
-                                           name="date_contract" data-toggle="tooltip" title="Mes / día / año | Fecha del día que se subió el Contrato"
+                                           name="date_contract" data-toggle="tooltip" title="Mes / día / año | Fecha del día que se subió el contrato"
                                            id="example-date-input">
-                                    <small class="form-text text-muted">Mes / día / año | Fecha del día que se subió el Contrato</small>
+                                    <small class="form-text text-muted">Mes / día / año | Fecha del día que se subió el contrato</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
@@ -96,7 +96,7 @@
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-name2-input" class="col-sm-3 col-form-label">Subir Contrato</label>
+                                <label for="example-name2-input" class="col-sm-3 col-form-label">Subir contrato</label>
                                 <div class="col-sm-9">
                                     <div class="input-group mt-2">
                                         <div class="custom-file">
