--- a/WebApplication1/Areas/coadmin/Views/documentos/agregar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/documentos/agregar.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "agregar";
-    Page.Title = "Agregar Documento - Brokolee Software";
+    Page.Title = "Agregar documento - Brokolee Software";
 }
 
 <script src="~/Scripts/jquery-3.1.1.min.js"></script>
@@ -21,13 +21,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Agregar Documento</h4>
+                            <h4 class="page-title">Agregar documento</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin"})" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Agregar Documento</li>
+                            <li class="breadcrumb-item active">Agregar documento</li>
                         </ul>
                     </div>
                 </div>
@@ -58,7 +58,7 @@
                     {
                         @Html.AntiForgeryToken()
                         <div class="card-body">
-                            <h5 class="d-inline-block">Nuevo Documento</h5>
+                            <h5 class="d-inline-block">Nuevo documento</h5>
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
@@ -86,7 +86,7 @@
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-name2-input" class="col-sm-3 col-form-label">Subir Documento</label>
+                                <label for="example-name2-input" class="col-sm-3 col-form-label">Subir documento</label>
                                 <div class="col-sm-9">
                                     <div class="input-group mt-2">
                                         <div class="custom-file">
@@ -117,7 +117,7 @@
                                            data-toggle="tooltip" title="Correo electrónico de quien sube el documento"
                                            placeholder="Subido por" name="id_user"
                                            id="id_user" required />
-                                    @*<small class="form-text text-muted">Correo electrónico de quien sube el documento</small>*@
+                                    <small class="form-text text-muted">Correo electrónico de quien sube el documento</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
@@ -156,7 +156,7 @@
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-address1-input" class="col-sm-3 col-form-label">Notificar por Correo Electrónico</label>
+                                <label for="example-address1-input" class="col-sm-3 col-form-label">Notificar por correo electrónico</label>
                                 <div class="col-sm-9">
                                     <div class="form-check-inline my-2">
                                         <div class="custom-control custom-checkbox">
