--- a/WebApplication1/Areas/coadmin/Views/documentos/categoria.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/documentos/categoria.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "categoria";
-    Page.Title = "Crear Categoría - Brokolee Software";
+    Page.Title = "Crear categoría - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -13,13 +13,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Crear Categoría</h4>
+                            <h4 class="page-title">Crear categoría</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Crear Categoría</li>
+                            <li class="breadcrumb-item active">Crear categoría</li>
                         </ul>
                     </div>
                 </div>
@@ -42,7 +42,7 @@
                     {
                         @Html.AntiForgeryToken()
                     <div class="card-body">
-                        <h5 class="d-inline-block">Nueva Categoría</h5>
+                        <h5 class="d-inline-block">Nueva categoría</h5>
                         <div class="form-divider"></div>
                         <div class="form-group row">
                             <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
@@ -55,7 +55,7 @@
                         </div>
                         <div class="form-divider"></div>
                         <div class="form-group row">
-                            <label for="example-address1-input" class="col-sm-3 col-form-label">Nivel de Acceso</label>
+                            <label for="example-address1-input" class="col-sm-3 col-form-label">Nivel de acceso</label>
                             <div class="col-sm-9">
                                 <div class="form-check-inline my-2">
                                     <div class="custom-control custom-checkbox">
@@ -88,7 +88,7 @@
                     <div class="card-body">
                         <div class="row form-material">
                             <div class="col-md-6">
-                                <h5 class="d-inline-block">Listado de Categorías</h5>
+                                <h5 class="d-inline-block">Listado de categorías</h5>
                             </div>
                             <div class="col-md-6 mb-1">
 
@@ -100,7 +100,7 @@
                                     <tr>
                                         <th>Categoría</th>
                                         <th>Documentos</th>
-                                        <th>Nivel de Acceso</th>
+                                        <th>Nivel de acceso</th>
                                         <th class="text-center">Opciones</th>
                                     </tr>
                                 </thead>
