--- a/WebApplication1/Areas/coadmin/Views/documentos/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/documentos/editar.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "editar";
-    Page.Title = "Editar Documento - Brokolee Software";
+    Page.Title = "Editar documento - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -13,13 +13,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Editar Documento</h4>
+                            <h4 class="page-title">Editar documento</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Dashboard</a></li>
-                            <li class="breadcrumb-item active">Editar Documento</li>
+                            <li class="breadcrumb-item active">Editar documento</li>
                         </ul>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-name2-input" class="col-sm-3 col-form-label">Subir Documento</label>
+                                <label for="example-name2-input" class="col-sm-3 col-form-label">Subir documento</label>
                                 <div class="col-sm-9">
                                     <div class="input-group mt-2">
                                         <div class="custom-file">
