--- a/WebApplication1/Areas/coadmin/Views/documentos/editarcategoria.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/documentos/editarcategoria.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "editarcategoria";
-    Page.Title = "Editar Categoría - Brokolee Software";
+    Page.Title = "Editar categoría - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -13,13 +13,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Editar Categoría</h4>
+                            <h4 class="page-title">Editar categoría</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Dashboard</a></li>
-                            <li class="breadcrumb-item active">Editar Categoría</li>
+                            <li class="breadcrumb-item active">Editar categoría</li>
                         </ul>
                     </div>
                 </div>
@@ -48,7 +48,7 @@
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-address1-input" class="col-sm-3 col-form-label">Nivel de Acceso</label>
+                                <label for="example-address1-input" class="col-sm-3 col-form-label">Nivel de acceso</label>
                                 <div class="col-sm-9">
                                     <div class="form-check-inline my-2">
                                         <div class="custom-control custom-checkbox">
@@ -98,7 +98,7 @@
                     <div class="card-body">
                         <div class="row form-material">
                             <div class="col-md-6">
-                                <h5 class="d-inline-block">Listado de Categorías</h5>
+                                <h5 class="d-inline-block">Listado de categorías</h5>
                             </div>
                             <div class="col-md-6 mb-1">
 
@@ -112,7 +112,7 @@
                                     <tr>
                                         <th>Categoría</th>
                                         <th>Documentos</th>
-                                        <th>Nivel de Acceso</th>
+                                        <th>Nivel de acceso</th>
                                         <th class="text-center">Opciones</th>
                                     </tr>
                                 </thead>
