--- a/WebApplication1/Areas/coadmin/Views/documentos/listado.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/documentos/listado.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "legales";
-    Page.Title = "Documentos Legales de la Comunidad - Brokolee Software";
+    Page.Title = "Documentos legales de la comunidad - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -13,13 +13,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Documentos Legales de la Comunidad</h4>
+                            <h4 class="page-title">Documentos legales de la comunidad</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Documentos Legales de la Comunidad</li>
+                            <li class="breadcrumb-item active">Documentos legales de la comunidad</li>
                         </ul>
                     </div>
                 </div>
@@ -67,7 +67,7 @@
                     <div class="card-body">
                         <div class="row form-material">
                             <div class="col-md-6">
-                                <h5 class="d-inline-block">Listado de Documentos</h5>
+                                <h5 class="d-inline-block">Listado de documentos</h5>
                             </div>
                         </div>
                         <div class="table-responsive">
