--- a/WebApplication1/Areas/coadmin/Views/documentos/ver.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/documentos/ver.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "ver";
-    Page.Title = "Ver Documento - Brokolee Software";
+    Page.Title = "Ver documento - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Dashboard</a></li>
-                            <li class="breadcrumb-item active">Editar Documento</li>
+                            <li class="breadcrumb-item active">Ver documento</li>
                         </ul>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                         </div>
                         <div class="form-divider"></div>
                         <div class="form-group row">
-                            <label for="example-name2-input" class="col-sm-3 col-form-label">Subir Documento</label>
+                            <label for="example-name2-input" class="col-sm-3 col-form-label">Subir documento</label>
                             <div class="col-sm-9">
                                 <div class="input-group mt-2">
                                     <div class="custom-file">
