--- a/WebApplication1/Areas/coadmin/Views/eventos/agregar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/eventos/agregar.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "agregar";
-    Page.Title = "Agregar Evento - Brokolee Software";
+    Page.Title = "Agregar evento - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -13,13 +13,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Agregar Evento</h4>
+                            <h4 class="page-title">Agregar evento</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Agregar Evento</li>
+                            <li class="breadcrumb-item active">Agregar evento</li>
                         </ul>
                     </div>
                 </div>
@@ -46,7 +46,7 @@
                     {
                         @Html.AntiForgeryToken()
                     <div class="card-body">
-                        <h5 class="d-inline-block">Nuevo Evento</h5>
+                        <h5 class="d-inline-block">Nuevo evento</h5>
                         <div class="form-divider"></div>
                         <div class="form-group row">
                             <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
