--- a/WebApplication1/Areas/coadmin/Views/eventos/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/eventos/editar.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "editar";
-    Page.Title = "Editar Evento - Brokolee Software";
+    Page.Title = "Editar evento - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -13,13 +13,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Editar Evento</h4>
+                            <h4 class="page-title">Editar evento</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Editar Evento</li>
+                            <li class="breadcrumb-item active">Editar evento</li>
                         </ul>
                     </div>
                 </div>
@@ -49,7 +49,7 @@
                         @Html.AntiForgeryToken()
                         <input type="hidden" value="@Model.editEvent.id" name="editID"/>
                         <div class="card-body">
-                            <h5 class="d-inline-block">Aniversario del Condominio</h5>
+                            <h5 class="d-inline-block">Editar evento</h5>
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
