--- a/WebApplication1/Areas/coadmin/Views/eventos/inactivos.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/eventos/inactivos.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "inactivos";
-    Page.Title = "Eventos Inactivos- Brokolee Software";
+    Page.Title = "Eventos inactivos- Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -13,13 +13,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Listado de Eventos</h4>
+                            <h4 class="page-title">Eventos inactivos</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Listado de Eventos</li>
+                            <li class="breadcrumb-item active">Eventos inactivos</li>
                         </ul>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                             <table id="dataTable-directorio-suplidores" class="table table-striped table-bordered normal" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                                 <thead class="alert-inactive">
                                     <tr>
-                                        <th class="f-b">Nombre del Evento</th>
+                                        <th class="f-b">Nombre del evento</th>
                                         <th class="f-b">Fecha</th>
                                         <th class="f-b">Hora</th>
                                         <th class="f-b">Lugar</th>
