--- a/WebApplication1/Areas/coadmin/Views/facilidades/agregar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/facilidades/agregar.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "agregar";
-    Page.Title = "Agregar Facilidad - Brokolee Software";
+    Page.Title = "Agregar facilidad - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Agregar Facilidad</li>
+                            <li class="breadcrumb-item active">Agregar facilidad</li>
                         </ul>
                     </div>
                 </div>
@@ -48,7 +48,7 @@
                     {
                         @Html.AntiForgeryToken()
                         <div class="card-body">
-                            <h5 class="d-inline-block">Nueva Facilidad</h5>
+                            <h5 class="d-inline-block">Nueva facilidad</h5>
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
