--- a/WebApplication1/Areas/coadmin/Views/facilidades/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/facilidades/editar.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "editar";
-    Page.Title = "Editar Facilidad - Brokolee Software";
+    Page.Title = "Editar facilidad - Brokolee Software";
 }
 
 <script src="~/Scripts/jquery-3.1.1.min.js"></script>
@@ -23,13 +23,13 @@
                     <div class="page-title-box">
                         <div class="float-left">
                             <div class="breadcrumb float-md-right">
-                                <h4 class="page-title">Editar Facilidad</h4>
+                                <h4 class="page-title">Editar facilidad</h4>
                             </div>
                         </div>
                         <div class="float-right">
                             <ul class="breadcrumb float-md-right">
                                 <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                                <li class="breadcrumb-item active">Editar Facilidad</li>
+                                <li class="breadcrumb-item active">Editar facilidad</li>
                             </ul>
                         </div>
                     </div>
@@ -61,7 +61,7 @@
                             @Html.AntiForgeryToken()
                             <input name="facID" value="@Model.editFac.id" type="hidden" />
                             <div class="card-body">
-                                <h5 class="d-inline-block">Gimnasio</h5>
+                                <h5 class="d-inline-block">Editar facilidad</h5>
                                 <div class="form-divider"></div>
                                 <div class="form-group row">
                                     <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
