--- a/WebApplication1/Areas/coadmin/Views/facilidades/reservartwo.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/facilidades/reservartwo.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Reservar Facilidad - Brokolee Software";
+    ViewBag.Title = "Reservar facilidad - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -12,13 +12,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Reservar Facilidad</h4>
+                            <h4 class="page-title">Reservar facilidad</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Reservar Facilidad</li>
+                            <li class="breadcrumb-item active">Reservar facilidad</li>
                         </ul>
                     </div>
                 </div>
@@ -48,14 +48,14 @@
                     {
                         @Html.AntiForgeryToken()
                         <div class="card-body">
-                            <h5 class="d-inline-block">3. Información del Titular</h5>
+                            <h5 class="d-inline-block">3. Información del titular</h5>
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" type="text" value="" name="first_name"
                                            placeholder="Nombre" id="example-email-input" required>
-                                    <small class="form-text text-muted">Nombre del Titular</small>
+                                    <small class="form-text text-muted">Nombre del titular</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
@@ -104,7 +104,7 @@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
-                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Pagar Reserva</button></a>
+                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                             <a href=""><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
