--- a/WebApplication1/Areas/coadmin/Views/facilidades/solicitudes.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/facilidades/solicitudes.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "solicitudes";
-    Page.Title = "Solicitudes de Aprobación - Brokolee Software";
+    Page.Title = "Solicitudes de aprobación - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -13,13 +13,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Solicitudes de Aprobación</h4>
+                            <h4 class="page-title">Solicitudes de aprobación</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Solicitudes de Aprobación</li>
+                            <li class="breadcrumb-item active">Solicitudes de aprobación</li>
                         </ul>
                     </div>
                 </div>
@@ -77,9 +77,9 @@
                                     <tr>
                                         <th class="f-b">Fecha de solicitud</th>
                                         <th class="f-b">Nombre</th>
-                                        <th class="f-b">Descripción de la Actividad</th>
-                                        <th class="f-b">Hora Inicio</th>
-                                        <th class="f-b">Hora Fin</th>
+                                        <th class="f-b">Descripción de la actividad</th>
+                                        <th class="f-b">Hora inicio</th>
+                                        <th class="f-b">Hora fin</th>
                                         <th class="f-b">Intervalo</th>
                                         <th class="f-b">Estado</th>
                                         @*<th class="f-b">Solicitud</th>*@
