--- a/WebApplication1/Areas/coadmin/Views/tareas/completadas.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/tareas/completadas.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "completadas";
-    Page.Title = "Tareas Completadas - Brokolee Software";
+    Page.Title = "Tareas completadas - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -13,13 +13,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Tareas Completadas</h4>
+                            <h4 class="page-title">Tareas completadas</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Tareas Completadas</li>
+                            <li class="breadcrumb-item active">Tareas completadas</li>
                         </ul>
                     </div>
                 </div>
@@ -58,7 +58,7 @@
                                 <h5 class="d-inline-block">Listado</h5>
                             </div>
                             <div class="col-md-6 mb-1">
-                                <a href="@Url.Action("agregar", "tareas", new { area = "coadmin" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Agregar nuevo</button></a>
+                                <a href="@Url.Action("agregar", "tareas", new { area = "coadmin" })"><button type="button" class="btn btn-warning waves-effect waves-light float-xl-right float-lg-right float-md-left"> Crear nueva tarea</button></a>
                             </div>
                         </div>
 
@@ -66,7 +66,7 @@
                             <table id="dataTable-tareas-completadas" class="table table-striped table-bordered normal" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                                 <thead class="alert-inactive">
                                     <tr>
-                                        <th class="f-b">Nombre de Tarea</th>
+                                        <th class="f-b">Nombre de tarea</th>
                                         <th class="f-b">Responsable</th>
                                         <th class="f-b">Fecha</th>
                                         <th class="f-b">Completado</th>
