--- a/WebApplication1/Areas/coadmin/Views/tareas/listado.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/tareas/listado.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "listado";
-    Page.Title = "Listado de Tareas - Brokolee Software";
+    Page.Title = "Listado de tareas - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -13,13 +13,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Listado de Tareas</h4>
+                            <h4 class="page-title">Listado de tareas</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "tareas", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Listado de Tareas</li>
+                            <li class="breadcrumb-item active">Listado de tareas</li>
                         </ul>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                                 <h5 class="d-inline-block">Listado</h5>
                             </div>
                             <div class="col-md-6 mb-1">
-                                <a href="@Url.Action("agregar", "tareas", new { area = "coadmin" })"><button type="button" class="btn btn-warning waves-effect waves-light float-xl-right float-lg-right float-md-left"> Crear Nueva Tarea</button></a>
+                                <a href="@Url.Action("agregar", "tareas", new { area = "coadmin" })"><button type="button" class="btn btn-warning waves-effect waves-light float-xl-right float-lg-right float-md-left"> Crear nueva tarea</button></a>
                             </div>
                         </div>
 
@@ -76,11 +76,11 @@
                             <table id="dataTable-tareas-completadas" class="table table-striped table-bordered normal" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                                 <thead>
                                     <tr>
-                                        <th class="f-b">Nombre de Tarea</th>
+                                        <th class="f-b">Nombre de tarea</th>
                                         <th class="f-b">Responsable</th>
                                         <th class="f-b">Fecha</th>
-                                        <th class="f-b">Fecha Límite</th>
-                                        <th class="text-center f-b">Nivel de Acceso</th>
+                                        <th class="f-b">Fecha límite</th>
+                                        <th class="text-center f-b">Nivel de acceso</th>
                                         <th class="f-b">Estado</th>
                                         <th class="text-center f-b">Opciones</th>
                                     </tr>
