--- a/WebApplication1/Areas/coadmin/Views/tecnico/soporte.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/tecnico/soporte.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "soporte";
-    Page.Title = "Soporte Técnico - Brokolee Software";
+    Page.Title = "Soporte técnico - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -13,13 +13,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Soporte Técnico</h4>
+                            <h4 class="page-title">Soporte técnico</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Soporte Técnico</li>
+                            <li class="breadcrumb-item active">Soporte técnico</li>
                         </ul>
                     </div>
                 </div>
@@ -41,7 +41,7 @@
                     <div class="card-body">
                         <div class="row form-material">
                             <div class="col-md-4 mb-4">
-                                <h5><i class="mdi mdi-comment-processing"></i> Mensajes Privados <span class="float-right"><a href=""><i class="mdi mdi-lead-pencil"></i></a></span></h5>
+                                <h5><i class="mdi mdi-comment-processing"></i>Soporte técnico<span class="float-right"><a href=""><i class="mdi mdi-lead-pencil"></i></a></span></h5>
                                 <div class="form-divider"></div>
                                 <div class="m-t-20">
                                     <a class="arrow-none waves-effect waves-light nav-user-soporte" href="#">
