--- a/WebApplication1/Areas/coadmin/Views/uso/aviso.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/uso/aviso.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "aviso";
-    Page.Title = "Aviso de Privacidad - Brokolee Software";
+    Page.Title = "Aviso de privacidad - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de Control</a></li>
-                            <li class="breadcrumb-item active">Aviso de Privacidad</li>
+                            <li class="breadcrumb-item active">Aviso de privacidad</li>
                         </ul>
                     </div>
                 </div>
