--- a/WebApplication1/Areas/coadmin/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/Shared/_Layout.cshtml
@@ -134,11 +134,11 @@
                         <li>
                             @if (Model.side_menu == "control_panel")
                             {
-                                <a href="@Url.Action("panel", "control", new{ area = "coadmin" })" class="waves-effect waves-light active"><i class="mdi mdi-home-modern"></i>Panel de Control</a>
+                                <a href="@Url.Action("panel", "control", new{ area = "coadmin" })" class="waves-effect waves-light active"><i class="mdi mdi-home-modern"></i>Panel de control</a>
                             }
                             else
                             {
-                                <a href="@Url.Action("panel", "control", new{ area = "coadmin" })" class="waves-effect waves-light"><i class="mdi mdi-home-modern"></i>Panel de Control</a>
+                                <a href="@Url.Action("panel", "control", new{ area = "coadmin" })" class="waves-effect waves-light"><i class="mdi mdi-home-modern"></i>Panel de control</a>
                             }
                         </li>
 
