correccion en coadmin

--- a/WebApplication1/Areas/coadmin/Views/titulares/agregar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/agregar.cshtml
@@ -121,9 +121,9 @@
                             <label for="example-email-input" class="col-sm-3 col-form-label">Correo electrónico</label>
                             <div class="col-sm-9">
                                 <input class="form-control" type="email" value="" name="email" required
-                                       data-toggle="tooltip" title="Base utilizada para identificar las unidades suscritas de varias comunidades adscritas."
+                                       data-toggle="tooltip" title="Correo electrónico del titular"
                                        placeholder="Correo electrónico del titular" id="example-email-input">
-                                <small class="form-text text-muted">Base utilizada para identificar las unidades suscritas de varias comunidades adscritas.</small>
+                                <small class="form-text text-muted">Correo electrónico del titular</small>
                             </div>
                         </div>
                         <div class="form-divider"></div>
