--- a/WebApplication1/Areas/coadmin/Views/titulares/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/editar.cshtml
@@ -129,7 +129,7 @@
                                     <input class="form-control" type="email" name="email" required value="@Model.editUser.email"
                                            data-toggle="tooltip"
                                            placeholder="Correo electrónico del titular" id="example-email-input">
-                                    <small class="form-text text-muted">Base utilizada para identificar las unidades suscritas de varias comunidades adscritas.</small>
+                                    @*<small class="form-text text-muted">Correo electrónico del titular</small>*@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
